--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -11,7 +11,13 @@
 [env]
 platform = ststm32@17.4.0
 framework = arduino
-platform_packages = framework-arduinoststm32@https://github.com/stm32duino/Arduino_Core_STM32.git#361a7fdb67e2a7104e99b4f42a802469eef8b129
+
+platform_packages =
+	; PlatformIO's OpenOCD package is too outdated to support STM32C0x series
+	; Downloaded version from https://github.com/xpack-dev-tools/openocd-xpack/releases, put package.json inside it, and reference it
+	tool-openocd@symlink://packages/xpack-openocd-0.12.0-3-linux-x64
+	; Updated arduinoststm32 version fixes some clock errors (https://github.com/stm32duino/Arduino_Core_STM32/commit/75bda51e7c6d79415326ac43a199ee36200d93a1)
+	framework-arduinoststm32@https://github.com/stm32duino/Arduino_Core_STM32.git#361a7fdb67e2a7104e99b4f42a802469eef8b129
 
 lib_deps = 
 	FastCRC
@@ -19,19 +25,12 @@ lib_deps =
 	arduinogetstarted/ezLED @ ^1.0.1
 
 ;build_flags =
-;  -D PIO_FRAMEWORK_ARDUINO_SERIAL_DISABLED ; AP20240615 Consumes ~5.5k
-;  -D PIO_FRAMEWORK_ARDUINO_NANOLIB_FLOAT_PRINTF
+;  -D PIO_FRAMEWORK_ARDUINO_SERIAL_DISABLED ; AP20240615 Consumes approx. 5.5k
 
-upload_protocol = stlink
 debug_tool = stlink
+debug_build_flags = -O1 -g -ggdb2
+
 
 [env:STM32C011F6_V1x]
 board = genericSTM32C011F6
 extra_scripts = suppress_register_warnings.py
-
-[env:YF_RM-ECOW-V100_STM32]
-board = disco_f030r8
-build_flags =
-  ${env.build_flags}
-  -DHW_RMECOWV100
-upload_command = openocd -f interface/stlink-v2.cfg -f target/stm32f0x.cfg -c "init; reset halt; stm32f0x unlock 0; reset run" -c "program {$SOURCE} verify reset; shutdown;"
