--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -44,7 +44,7 @@ jobs:
           fetch-depth: 0
       - uses: INTI-CMNB/KiBot@v2_k8
         with:
-          config: PCB/xESC_YF_r4.kibot.kibot.yaml
+          config: PCB/xESC_YF_r4.kibot.yaml
           board: PCB/xESC_YF_r4.kibot.kicad_pcb
 
       - name: 'Fix permissions on release/'
