--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,7 +45,7 @@ jobs:
       - uses: INTI-CMNB/KiBot@v2_k8
         with:
           config: PCB/xESC_YF_r4.kibot.yaml
-          board: PCB/xESC_YF_r4.kibot.kicad_pcb
+          board: PCB/xESC_YF_r4.kicad_pcb
 
       - name: 'Fix permissions on release/'
         run: sudo chmod 0777 release
