--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -22,15 +22,16 @@ platform_packages =
 lib_deps = 
 	FastCRC
 	bakercp/PacketSerial@^1.4.0
-	arduinogetstarted/ezLED @ ^1.0.1
-
-;build_flags =
-;  -D PIO_FRAMEWORK_ARDUINO_SERIAL_DISABLED ; AP20240615 Consumes approx. 5.5k
 
 debug_tool = stlink
 debug_build_flags = -O2 -g -ggdb2
 
 
 [env:STM32C011F6_V1x]
+board = genericSTM32C011F6
+build_src_filter = ${env.build_src_filter} -<disable_nrst.c>
+extra_scripts = suppress_register_warnings.py
+
+[env:STM32C011F6_Disable_NRST]
 board = genericSTM32C011F6
 extra_scripts = suppress_register_warnings.py
