--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -29,9 +29,10 @@ debug_build_flags = -O2 -g -ggdb2
 
 [env:STM32C011F6_V1x]
 board = genericSTM32C011F6
-build_src_filter = ${env.build_src_filter} -<disable_nrst.c>
+build_src_filter = ${env.build_src_filter} -<disable_nrst.cpp>
 extra_scripts = suppress_register_warnings.py
 
 [env:STM32C011F6_Disable_NRST]
 board = genericSTM32C011F6
 extra_scripts = suppress_register_warnings.py
+build_src_filter = ${env.build_src_filter} -<main.cpp>
