--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "cmake.sourceDirectory": "${workspaceFolder}/firmware/src",
-    "cmake.buildDirectory": "${workspaceFolder}/firmware/build"
+    "cmake.buildDirectory": "${workspaceFolder}/firmware/build",
+    "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
 }
