--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,12 +42,13 @@ jobs:
           lbuild build
       - name: Compile firmware
         run: |
+          cd firmware/src
           scons build bin
       - name: Copy Artifacts
         run: |
           mkdir artifacts/
-          cp ../build/scons-release/xESC_YF_rev4-Firmware.elf ./artifacts/firmware_xesc_yf_rev4.elf
-          cp ../build/scons-release/xESC_YF_rev4-Firmware.bin ./artifacts/firmware_xesc_yf_rev4.bin
+          cp firmware/build/scons-release/xESC_YF_rev4-Firmware.elf ./artifacts/firmware_xesc_yf_rev4.elf
+          cp firmware/build/scons-release/xESC_YF_rev4-Firmware.bin ./artifacts/firmware_xesc_yf_rev4.bin
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
