--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -86,6 +86,7 @@ jobs:
           sha256sum release/firmware_xesc-yf-rev4.zip > release/firmware_xesc-yf-rev4.sha256
 
       - uses: "marvinpinto/action-automatic-releases@latest"
+        if: ${{ false }}
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
@@ -93,6 +94,7 @@ jobs:
 
       - name: Deploy release
         uses: peaceiris/actions-gh-pages@v4
+        if: ${{ false }}
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: release
@@ -100,6 +102,7 @@ jobs:
 
       - name: Deploy release_navigator
         uses: peaceiris/actions-gh-pages@v4
+        if: ${{ false }}
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: release_navigator
@@ -108,6 +111,7 @@ jobs:
 
       - name: Deploy release_navigator index
         uses: peaceiris/actions-gh-pages@v4
+        if: ${{ false }}
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: release_navigator
@@ -136,7 +140,9 @@ jobs:
           sha256sum firmware_xesc-yf-rev4.zip > firmware_xesc-yf-rev4.sha256
 
       - uses: "marvinpinto/action-automatic-releases@latest"
-        if: github.event_name != 'pull_request'
+        if: |
+          github.event_name != 'pull_request' &&
+          ${{ false }}
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           title: "Latest Firmware"
