Switch to mainline modm branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "firmware/ext/modm"]
 	path = firmware/ext/modm
-	url = https://github.com/Apehaenger/modm.git
-	branch = feature/STM32C0x1
+	url = https://github.com/modm-io/modm.git
+	branch = develop
