👷 ci(workflows): add support for building multiple hardware versions

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,19 +36,29 @@ jobs:
       - name: Update lbuild
         run: |
           pip3 install --upgrade --upgrade-strategy=eager modm
-      - name: Run lbuild
+      - name: Run HW v1 lbuild
         run: |
           cd firmware/src
-          lbuild build
-      - name: Compile firmware
+          lbuild -c project.hw_v1.xml build
+      - name: Compile HW v1 firmware
+        run: |
+          cd firmware/src
+          scons build bin
+      - name: Run HW v2 lbuild
+        run: |
+          cd firmware/src
+          lbuild -c project.hw_v2.xml build
+      - name: Compile HW v2 firmware
         run: |
           cd firmware/src
           scons build bin
       - name: Copy Artifacts
         run: |
           mkdir artifacts/
-          cp firmware/build/scons-release/xESC_YF_rev4-Firmware.elf ./artifacts/firmware_xesc_yf_rev4.elf
-          cp firmware/build/scons-release/xESC_YF_rev4-Firmware.bin ./artifacts/firmware_xesc_yf_rev4.bin
+          cp firmware/build/v1/scons-release/xESC_YF_rev4_v1-Firmware.elf ./artifacts/firmware_xesc_yf_rev4_v1.elf
+          cp firmware/build/v1/scons-release/xESC_YF_rev4_v1-Firmware.bin ./artifacts/firmware_xesc_yf_rev4_v1.bin
+          cp firmware/build/v2/scons-release/xESC_YF_rev4_v2-Firmware.elf ./artifacts/firmware_xesc_yf_rev4_v2.elf
+          cp firmware/build/v2/scons-release/xESC_YF_rev4_v2-Firmware.bin ./artifacts/firmware_xesc_yf_rev4_v2.bin
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
