--- a/PCB/xESC_YF_r4.kibot.yaml
+++ b/PCB/xESC_YF_r4.kibot.yaml
@@ -2,8 +2,10 @@ kibot:
   version: 1
 
 preflight:
-  run_drc: true
   run_erc: true
+  run_drc: true
+  erc_warnings: false
+  drc_warnings: false
 
   set_text_variables:
     - name: 'git_version'
