--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: INTI-CMNB/KiBot@v2_dk9
+      - uses: INTI-CMNB/KiBot@v2_k9
         with:
           config: PCB/xESC_YF_r4.kibot.yaml
           board: PCB/xESC_YF_r4.kicad_pcb
@@ -74,7 +74,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: INTI-CMNB/KiBot@v2_dk9
+      - uses: INTI-CMNB/KiBot@v2_k9
         with:
           config: PCB/xESC_YF_r4.kibot.yaml
           board: PCB/xESC_YF_r4.kicad_pcb
