--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ firmware/src/.sconsign.dblite
 firmware/host-hw-config/modm
 firmware/host-hw-config/.sconsign.dblite
 firmware/host-hw-config/SConstruct
+firmware/host-hw-config/project.*xml.log
