--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ firmware/host-hw-config/modm
 firmware/host-hw-config/.sconsign.dblite
 firmware/host-hw-config/SConstruct
 firmware/host-hw-config/project.*xml.log
+.vscode/settings.json
