--- a/.gitignore
+++ b/.gitignore
@@ -40,4 +40,5 @@ firmware/src/hw-v?.xml.log
 firmware/host-hw-config/modm
 firmware/host-hw-config/.sconsign.dblite
 firmware/host-hw-config/SConstruct
+firmware/host-hw-config/project.xml.log
 .vscode/settings.json
